Enable operator on release ns

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -52,8 +52,8 @@ prometheus-operator:
 
     namespaces:
       releaseNamespace: true
-    #  additional:
-    #    - kube-system
+      additional:
+        - kube-system
 
   nodeExporter:
     enabled: true
