--- a/charts/kubezero-metrics/templates/istio-service.yaml
+++ b/charts/kubezero-metrics/templates/istio-service.yaml
@@ -14,3 +14,20 @@ spec:
     - destination:
         host: metrics-grafana
 {{- end }}
+---
+{{- if .Values.prometheus.istio.enabled }}
+apiVersion: networking.istio.io/v1alpha3
+kind: VirtualService
+metadata:
+  name: prometheus
+  namespace: monitoring
+spec:
+  hosts:
+  - {{ .Values.prometheus.istio.url }}
+  gateways:
+  - {{ .Values.prometheus.istio.gateway }}
+  http:
+  - route:
+    - destination:
+        host: metrics-prometheus-operato-prometheus
+{{- end }}
