Temp add custom prometheus url

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -111,6 +111,8 @@ prometheus-operator:
 
 # Metrics adapter
 prometheus-adapter:
+  prometheus:
+    url: metrics-prometheus-operato-prometheus
   tolerations:
   - key: node-role.kubernetes.io/master
     effect: NoSchedule
