Adapter config from kube-prometheus

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -140,7 +140,7 @@ prometheus-adapter:
         nodeQuery: sum(node_memory_MemTotal_bytes{job="node-exporter",<<.LabelMatchers>>} - node_memory_MemAvailable_bytes{job="node-exporter",<<.LabelMatchers>>}) by (<<.GroupBy>>)
         resources:
           overrides:
-            instance:
+            node:
               resource: node
             namespace:
               resource: namespace
