Add node_exporter relabel for adapter

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -67,6 +67,14 @@ prometheus-operator:
 
   nodeExporter:
     enabled: true
+    serviceMonitor:
+      relabelings:
+      - sourceLabels: [__meta_kubernetes_pod_node_name]
+        separator: ;
+        regex: ^(.*)$
+        targetLabel: node
+        replacement: $1
+        action: replace
 
   prometheus:
     enabled: true
