Enable kube_proxy metrics as a trial

--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -30,7 +30,7 @@ prometheus-operator:
   kubeEtcd:
     enabled: false
   kubeProxy:
-    enabled: false
+    enabled: true
   kubeScheduler:
     enabled: false
 
