--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -92,9 +92,11 @@ kubezero:
     values:
       istiod:
         replicaCount: {{ ternary 2 1 .Values.HighAvailableControlplane }}
+      {{- if not ( index .Values "cert-manager" "not_ready" ) }}
       {{- if .Values.istio.ingress }}
       ingress:
         {{- toYaml .Values.istio.ingress | nindent 8 }}
+      {{- end }}
       {{- end }}
 
   metrics:
