--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -35,6 +35,7 @@ prometheus-operator:
       targetPort: 10257
     serviceMonitor:
       https: true
+      insecureSkipVerify: true
 
   kubeScheduler:
     enabled: true
@@ -43,6 +44,7 @@ prometheus-operator:
       targetPort: 10259
     serviceMonitor:
       https: true
+      insecureSkipVerify: true
 
   kubelet:
     enabled: true
