--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -116,9 +116,11 @@ kubezero:
           {{- toYaml . | nindent 10 }}
           {{- end }}
       {{- end }}
-      {{- if .Values.metrics.prometheus-operator }}
+      {{- if index .Values "metrics" "prometheus-operator" }}
       prometheus-operator:
-      {{- toYaml .Values.metrics.prometheus-operator | nindent 8 }}
+        {{- with index .Values "metrics" "prometheus-operator" }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- end }}
 
 argo-cd:
