--- a/charts/kubezero-metrics/templates/istio-service.yaml
+++ b/charts/kubezero-metrics/templates/istio-service.yaml
@@ -3,7 +3,8 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: grafana
-  namespace: monitoring
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   hosts:
   - {{ .Values.grafana.istio.url }}
@@ -20,7 +21,8 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: prometheus
-  namespace: monitoring
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   hosts:
   - {{ .Values.prometheus.istio.url }}
