Various deps updates, Istio to 1.6.7

--- a/charts/kubezero-istio/templates/ingress-certificate.yaml
+++ b/charts/kubezero-istio/templates/ingress-certificate.yaml
@@ -4,6 +4,8 @@ kind: Certificate
 metadata:
   name: public-ingress-cert
   namespace: istio-system
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   secretName: public-ingress-cert
   issuerRef:
