--- a/charts/kubezero-istio/templates/istio.yaml
+++ b/charts/kubezero-istio/templates/istio.yaml
@@ -3,6 +3,8 @@ kind: IstioOperator
 metadata:
   name: kubezero-istio
   namespace: istio-system
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 spec:
   profile: empty
   addonComponents:
