--- a/charts/kubezero-istio/templates/istio-private-ingress.yaml
+++ b/charts/kubezero-istio/templates/istio-private-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ingress.private }}
+{{- if .Values.ingress.private.enabled }}
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
@@ -36,7 +36,7 @@ spec:
           value: standard
         {{- if eq .Values.ingress.type "NodePort" }}
         nodeSelector:
-          node.kubernetes.io/ingress.private: "31080_31443_30671_30672_31224"
+          node.kubernetes.io/ingress.private: {{ .Values.ingress.private.nodeSelector }}
         {{- end }}
         resources:
           limits:
