--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -85,6 +85,7 @@ prometheus-operator:
       releaseNamespace: true
       additional:
         - kube-system
+        - logging
 
   nodeExporter:
     enabled: true
