--- a/charts/kubezero-logging/Chart.yaml
+++ b/charts/kubezero-logging/Chart.yaml
@@ -1,20 +1,21 @@
 apiVersion: v2
-name: kubezero-istio
-description: KubeZero Umbrella Chart for Istio
+name: kubezero-logging
+description: KubeZero Umbrella Chart for complete EFK stack
 type: application
-version: 0.2.3
-appVersion: 1.6.7
+version: 0.0.1
+appVersion: 1.2.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
-  - istio
+  - elasticsearch
+  - kibana
+  - fluentd
+  - fluent-bit
 maintainers:
   - name: Quarky9
 dependencies:
   - name: kubezero-lib
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
-  - name: istio-operator
-    version: ">= 1.6"
 kubeVersion: ">= 1.16.0"
