--- a/charts/kubezero-logging/templates/secrets.yaml
+++ b/charts/kubezero-logging/templates/secrets.yaml
@@ -4,9 +4,11 @@ type: Opaque
 metadata:
   labels:
     common.k8s.elastic.co/type: elasticsearch
-    elasticsearch.k8s.elastic.co/cluster-name: {{ .Values.name }}
-  name: {{ .Values.name }}-es-elastic-user
+    elasticsearch.k8s.elastic.co/cluster-name: {{ template "kubezero-lib.fullname" $ }}
+  name: {{ template "kubezero-lib.fullname" $ }}-elastic-user
   namespace: {{ .Release.Namespace }}
+  labels:
+{{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   username: {{ "elastic" | b64enc | quote }}
   elastic: {{ .Values.es.elastic_password | b64enc | quote }}
