--- a/charts/kubezero-logging/values.yaml
+++ b/charts/kubezero-logging/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 
 # This is for backwards compatibility with older zdt-logging setup
-# fullnameOverride: logging
+# fullnameOverride: ""
 
 # Version for ElasticSearch and Kibana have to match so we define it at top-level
 version: 7.8.1
@@ -15,8 +15,12 @@ es:
   #    size: 16Gi
   #    class: local-sc-xfs
   #  zone: us-west-2a
-  s3_snapshot_iamrole: "" # INSERT_CLOUDFORMATION_OUTPUT_ElasticSearchSnapshots
+  s3Snapshot:
+    enabled: false
+    iamrole: "" # INSERT_CLOUDFORMATION_OUTPUT_ElasticSearchSnapshots
   elastic_password: "" # super_secret_elastic_password
+
+  prometheus: false
 
 kibana:
   #replicas: 1
