--- a/charts/kubezero-logging/templates/secrets.yaml
+++ b/charts/kubezero-logging/templates/secrets.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     common.k8s.elastic.co/type: elasticsearch
     elasticsearch.k8s.elastic.co/cluster-name: {{ template "kubezero-lib.fullname" $ }}
-  name: {{ template "kubezero-lib.fullname" $ }}-elastic-user
+  name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
   namespace: {{ .Release.Namespace }}
   labels:
 {{ include "kubezero-lib.labels" . | indent 4 }}
