Add elastic-system ns to kubezero

--- a/charts/kubezero-argo-cd/templates/project.yaml
+++ b/charts/kubezero-argo-cd/templates/project.yaml
@@ -26,6 +26,8 @@ spec:
     server: https://kubernetes.default.svc
   - namespace: monitoring
     server: https://kubernetes.default.svc
+  - namespace: elastic-system
+    server: https://kubernetes.default.svc
   - namespace: logging
     server: https://kubernetes.default.svc
 
