Add proper label for kiam servicemonitors

--- a/charts/kubezero-kiam/values.yaml
+++ b/charts/kubezero-kiam/values.yaml
@@ -26,6 +26,8 @@ kiam:
     prometheus:
       servicemonitor:
         enabled: false
+        labels:
+          release: metrics
     log:
       level: warn
 
@@ -51,6 +53,8 @@ kiam:
     prometheus:
       servicemonitor:
         enabled: false
+        labels:
+          release: metrics
     log:
       level: warn
   #  extraEnv:
