Adjust scrape internal for kiam to match others, and servicemonitor for agents

--- a/charts/kubezero-kiam/values.yaml
+++ b/charts/kubezero-kiam/values.yaml
@@ -26,6 +26,7 @@ kiam:
     prometheus:
       servicemonitor:
         enabled: false
+        interval: 30s
         labels:
           release: metrics
     log:
@@ -53,6 +54,7 @@ kiam:
     prometheus:
       servicemonitor:
         enabled: false
+        interval: 30s
         labels:
           release: metrics
     log:
