--- a/deploy/templates/values.yaml
+++ b/deploy/templates/values.yaml
@@ -59,6 +59,10 @@ kubezero:
           prometheus:
             servicemonitor:
               enabled: {{ .Values.metrics.enabled }}
+        agent:
+          prometheus:
+            servicemonitor:
+              enabled: {{ .Values.metrics.enabled }}
   {{- end }}
 
   {{- if not .Values.kiam.not_ready }}
